@@ -1,2 +1,2 @@
-#Quisk version 4.2.29
+#Quisk version 4.2.30
 from .quisk import main
